--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -57,6 +57,7 @@
   PB_RUS_Gold_Mines:0 "Gold Mines"
   PB_RUS_A_Navy_To_Match:0 "A Navy To Match"
   PB_RUS_Russian_Tariffs:0 "Russian Tariffs"
+  PB_RUS_A_State_Under_Construction3:0 "The Strong State"
   ##########Ideas For The Russian Collapse##########
   PB_RUS_Volga_Germany:0 "Volga Germany"
   PB_RUS_Don_Republic:0 "Don Republic"
@@ -119,7 +120,10 @@
   RUS_support_serbian_claims:0 " [SER.GetFlag] Support Serbian Claims"
   RUS_support_greek_nationalists:0 " [GRE.GetFlag] Support Greek Nationalists"
   RUS_support_bohemian_nationalists:0 " [CZE.GetFlag] Support Bohemian Nationalists"
-
+  RUS_Reformists_Lower:0 "Lower Reformist Faction Strength"
+  RUS_Loyalist_Lower:0 "Lower Loyalist Faction Strength"
+  RUS_Reconfigure_The_National_Front:0 "Reconfigure The National Front"
+  RUS_Political_Takeover:0 "Political Crisis!"
   ##########################
   # EVENTS
   ##########################
@@ -381,6 +385,12 @@
   russia88title:0 "Portugal Refuses"
   russia88desc:0 ""
   russia88opta:0 "Blast"
+  russia89title:0 "The Strong State"
+  russia89desc:0 ""
+  russia89opta:0 "Long Live Russia!"
+  russia90title:0 "A State Under Construction"
+  russia90desc:0 ""
+  russia90opta:0 "Long Live Russia!"
   ##########################
   # TOOLTIPS n Shit
   ##########################
@@ -461,6 +471,17 @@
   russia51tooltip:0 "§YNovorossiya§! will be known as the §YRussian Dominion Of North America§!"
   russia52tooltip:0 "§W--------------§!\nYour Military Modernization Will §GLargely Increase§! For Every Nation That Agrees To Participate In The §YWar Games§!"
   RUS_CHAOS:0 "Russia Is In Shambles"
+  russia53tooltip:0 "The Reformists Lowering Loyalist Strength"
+  russia54tooltip:0 "The Reformists Gaining A Moderate Amount Of Strength"
+  russia55tooltip:0 "The Reformists Gaining A Large Amount Of Strength"
+  russia56tooltip:0 "The Loyalists Lowering Reformist Strength"
+  russia57tooltip:0 "The Loyalists Gaining A Moderate Amount Of Strength"
+  russia58tooltip:0 "The Loyalists Gaining A Large Amount Of Strength"
+  Reformists_50:0 "Reformists Have More Than 50 Power Strength"
+  Reformists_50_Lower:0 "The Reformists Will Lose 20 Faction Strength"
+  Loyalists_50_Lower:0 "The Loyalists Will Lose 20 Faction Strength"
+  RUS_Political_Change:0 "The Political Crisis Will Be Resolved"
+  RUS_SCALES_AVOID:0 "The Political Crisis Has Been Avoided"
   ########################## 
   # FOCUS
   ##########################
@@ -728,10 +749,13 @@
   RUS_exploit_eritrean_gold:0 "Exploit Eritrean Gold"
   RUS_ethiopian_rubber_plantations:0 "Ethiopian Rubber Plantations"
   RUS_join_the_pact_revanchiste:0 "Join The Pact Revanchiste"
+  RUS_pan_slavic_ambitions:0 "Pan-Slavic Ambitions"
+  RUS_dreams_of_a_third_rome:0 "Dreams Of A Third Rome"
+  RUS_pax_rossica:0 "Pax Rossica"
   ##########################
   # Party Loyalty Mechanic n shit
   ##########################
-  russia1tooltip:0 "§YUnlocks§! £decision_icon_small the §CParty Loyalty§! mechanic"
+  russia1tooltip:0 "§YUnlocks§! £decision_icon_small The §YRussian National Front§! Mechanic\n§W--------------§!\n§YThe Russian National Front§! Is Divided Between §RLoyalists§! and §CReformists§!. Each Side Will Try To Gain §YFaction Strength§! And If Said Sides Reach 100 §TFaction Strength§! A §RPolitical Crisis§! Will Occur Giving Severe Stability, War Support, And Political §RDebuffs§!.\n§W--------------§!"
   RUS_Party_Loyaly_DEC:0 "Your Party Loyalty will §RDecrease§!"   
   RUS_Party_Loyaly_INC:0 "Your Party Loyalty will §GIncrease§!"
   PB_RUS_Party_Loyalty:0 "Party Loyalty"
@@ -740,11 +764,12 @@
   RUS_scales_Neu:0 "\n\n\nThe §CScales§! Tip To §YNo Side§!"
   RUS_scales_Pos:0 "\n\n\nThe §CScales§! Tip Towards The §YReformists§!"
   RUS_scales_Neg:0 "\n\n\nThe §CScales§! Tip Towards The §YLoyalists§!"
-  PB_RUS_Scales:0 "An Uneasy Peace"
-  PB_RUS_Scales_desc:0 "The internal political sphere of the Russian National Front is one divided by wishes and dreams belonging to its two biggest patrons, the Russian reformists lead by field marshal Lavr Kornilov, and the Loyalists lead by admiral Alexander Kolchak. Each sub party seeks its own policies and poor Mr Pyotr must sit back and watch these feral dogs fight it out.\n\nLoyalist Faction Strength: §Y[?Rus_Loyalists]§!                                      Reformist Faction Strength: §Y[?Rus_Reformists]§!"
-  RUS_Lavr_Is_Making_Moves:0 "Lavr Is Making Moves"
-  RUS_Kolchak_Is_Making_Moves:0 "Kolchak Is Making Moves"
-
+  PB_RUS_Scales:0 "Russkiy Natsional'nyy Front"
+  PB_RUS_Scales_desc:0 "The internal political sphere of the Russian National Front is one divided by wishes and dreams belonging to its two biggest patrons, the Russian reformists and the Loyalists. Each party seeks its own policies and approaches when dealing with certain actions and may take offense or gratitude when dealing with said situations. This is a game of balance, if any side gains too much power then a bloody coup is sure to ensue.\n\nLoyalist Faction Strength: §Y[?Rus_Loyalists]§!                                      Reformist Faction Strength: §Y[?Rus_Reformists]§!"
+  RUS_Lavr_Is_Making_Moves:0 "The Reformists Are Gaining Strength"
+  RUS_Kolchak_Is_Making_Moves:0 "The Loyalists Are Gaining Strength"
+  RUS_Loyalists_Are_Making_Moves:0 "Loyalist Political Maneuvers"
+  RUS_Reformists_Are_Making_Moves:0 "Reformist Political Maneuvers"
   #######################
   # Warlord shit
   #######################
