--- a/localisation/PB_News_Events_l_english.yml
+++ b/localisation/PB_News_Events_l_english.yml
@@ -232,6 +232,14 @@
   PBNews.58.d:0 ""
   PBNews.58.a:0 "They Deserve It"
 
+  PBNews.59.t:0 "The Third Roman Empire"
+  PBNews.59.d:0 "Ever since the fall of Rome to the Germanic Barbarians of the north the Roman Empire and it's predecessors have never reclaimed the true power and prestige that came bundled with the famous Eagle, Red flag. That day has changed as the current Russian administration has proclaimed a new era for the Russian people, based on the concepts of A Third Rome.\n\nWhat the future holds for the supposed return of Roman Empire nobody knows, but what is guaranteed is that a line of endless possibilities for expansion soon awaits."
+  PBNews.59.a:0 "Their Back Again?"
+
+  PBNews.60.t:0 "Pan-Slavia"
+  PBNews.60.d:0 "Never could historians predict the existance of a Pan-Slavic state, in fact how its currently even holding shape is a mere paradox. Today though there is an almost brief silence of relief, with the war over and a united state for all slavs there is a nation wide state of euphoria. Though how long this will last for no one knows.\n\nTime will tell if this period of unity will last or crumble under it's own weight."
+  PBNews.60.a:0 "This Can't Be Good"
+
   stockcrisis.1.t:0 "The Stock Crisis hits the Empire"
   stockcrisis.1.d:0 ""
   stockcrisis.1.a:0 "Oh dear"
