--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -394,6 +394,8 @@
   ##########################
   # TOOLTIPS n Shit
   ##########################
+  PAP_SECOND_ROME:0 "Third Roman Empire"
+  Pan_Slavia:0 "Pan-Slavia"
   RUS_LON:0 "British Occupation Authority Of Northern Russia"
   RET_AFRICA:0 "Russian East Africa"
   GBW_Exists:0 "The Great Balkan War is occuring"
@@ -482,6 +484,8 @@
   Loyalists_50_Lower:0 "The Loyalists Will Lose 20 Faction Strength"
   RUS_Political_Change:0 "The Political Crisis Will Be Resolved"
   RUS_SCALES_AVOID:0 "The Political Crisis Has Been Avoided"
+  russia59tooltip:0 "§R------The Third Roman Empire Will Be Announced To The World------§!"
+  russia60tooltip:0 "§R------Pan-Slavia Will Be Announced To The World------§!"
   ########################## 
   # FOCUS
   ##########################
