--- a/localisation/PB_countries_l_english.yml
+++ b/localisation/PB_countries_l_english.yml
@@ -7244,21 +7244,21 @@ SAN_jc:0 "Sanghli State"
  OMS_cn_ADJ:0 "Russian"
  OMS_an_ADJ:0 "Russian"
 
- PSK_ni:0 "Polish Gulag Revolt"
- PSK_ni_DEF:0 "Polish Gulag Revolt"
- PSK_ds:0 "Polish Gulag Revolt"
- PSK_ds_DEF:0 "Polish Gulag Revolt"
- PSK_rc:0 "Polish Gulag Revolt"
- PSK_rc_DEF:0 "Polish Gulag Revolt"
- PSK_an:0 "Polish Gulag Revolt"
- PSK_an_DEF:0 "Polish Gulag Revolt"
- PSK_cn:0 "Polish Gulag Revolt"
- PSK_cn_DEF:0 "Polish Gulag Revolt"
- PSK_lb:0 "Polish Gulag Revolt"
- PSK_lb_DEF:0 "Polish Gulag Revolt"
- PSK_ss:0 "Polish Gulag Revolt"
- PSK_ss_DEF:0 "Polish Gulag Revolt"
- PSK_jc:0 "Polish Gulag Revolt"
+ PSK_ni:0 "Polish National District"
+ PSK_ni_DEF:0 "Polish National District"
+ PSK_ds:0 "Polish National District"
+ PSK_ds_DEF:0 "Polish National District"
+ PSK_rc:0 "Polish National District"
+ PSK_rc_DEF:0 "Polish National District"
+ PSK_an:0 "Polish National District"
+ PSK_an_DEF:0 "Polish National District"
+ PSK_cn:0 "Polish National District"
+ PSK_cn_DEF:0 "Polish National District"
+ PSK_lb:0 "Polish National District"
+ PSK_lb_DEF:0 "Polish National District"
+ PSK_ss:0 "Polish National District"
+ PSK_ss_DEF:0 "Polish National District"
+ PSK_jc:0 "Polish National District"
  PSK_jc_DEF:0 "Polish"
  PSK_ni_ADJ:0 "Polish"
  PSK_rc_ADJ:0 "Polish"
