--- a/localisation/PB_Japan_l_english.yml
+++ b/localisation/PB_Japan_l_english.yml
@@ -17,6 +17,9 @@
   PB_JAP_Intense_Paranoia:0 "Intense Paranoia"
   PB_JAP_Red_Bushido:0 "Red Bushido"
   PB_JAP_Unrestrained_Industry:0 "Unrestrained Industrialization"
+  PB_JAP_Unrestrained_Industry1:0 "Unrestrained Industrialization"
+  PB_JAP_Unrestrained_Industry2:0 "Unrestrained Industrialization"
+  PB_JAP_Unrestrained_Industry3:0 "Unrestrained Industrialization"
   JAP_Womens_Rights:0 "Women's Rights Reform"
   PB_JAP_New_Republican_Terror:0 "The Second Republican Terror"
   JAP_Ideological_Fanatacism:0 "Ideological Fanatacism"
@@ -83,6 +86,16 @@
   PB_JAP_Hashimoto_Red_Bushido_New_Tenant:0 "...and Absolute Devotion to the Revolution"
 
   PB_JAP_Hashimoto_Breakneck_Industrialization:0 "Unshackling Our Potential"
+  PB_JAP_Hashimoto_Agricultural_Collectivization:0 "Introduce Collectivization"
+  PB_JAP_Hashimoto_Universal_Union:0 "Unify the Unions"
+  PB_JAP_Hashimoto_Market_Experiments:0 "Experiment with Limited Markets"
+  PB_JAP_Hashimoto_Stay_the_Course:0 "Purge the Psuedo Reformists"
+  PB_JAP_Revoke_Market_Experiments:0 "Revoke the Market Reforms"
+  PB_JAP_Continue_Market_Experiments:0 "Extrapolate on the Liberalizations"
+  PB_JAP_Dengist_Hashimoto:0 "To Grow Wealth is Magnificent"
+  PB_JAP_Purge_Revisionists:0 "The Great Japanese Proletarian Experiment"
+
+  PB_JAP_Ishii_Coup:0 "A Midnight Phone Call"
 
   ##########################
   # DECISIONS
@@ -177,6 +190,13 @@
   repjap.16.t:0 "New Recruits"
   repjap.16.d:0 "With the liberalization of gender norms, even women, once previously consigned to traditional roles, can partake in the revolution. Although, Hashimoto thought to himself, perhaps not quite to this extent. The training runs for the newly formed women's brigade were in full force, and the Grand Protector himself had arrived to oversee the fruits of his reforms.\n\nA brigade's worth of women, some as old as their forties, marched in lock step around Tokyo's empty parade grounds while others trained with rifles or bayonets. Hashimoto was less than impressed, most of the recruits were far too young or too old for frontline combat. Perhaps Ishii had been right when he protested the reforms to begin with-\n\nHis train of thought derailed at the sound of someone sceaming like a banshee. Glancing up, he caught a blur of a woman tackling one of the training instructors. The mock fight, training for close combat, ended within seconds as the woman held a mock knife to her instructor's throat. Realizing she was beneath the gaze of Japan's Generalissimo, she dropped the knife and quickly bowed. Hashimoto laughed, rose from his chair and stepped down on to the parade ground, gesturing for the woman to approach.\n\n\"You'll go a long way with that kind of enthusiasm,\" he joked, A hand clasped on her shoulder. \"Your name, comrade?\""
   repjap.16.a:0 "\"Sada, sir, Sada Abe\""
+
+  repjap.17.t:0 "The Midnight Phone Call"
+  repjap.17.d:0 "Ishii, having grown his power through Hashimoto's reforms, seizes the chance to take control of Japan and forces Hashimoto to resign and commit suicide, framing it as a reactionary assassination."
+  repjap.17.a:0 "The Shogun's finest pupil finally takes the throne"
+
+  repjap.18.t:0 "The Midnight Phone Call"
+  repjap.18.d:0 "Ishii attempts to seize control of the government, but understimates Hashimoto's control over the Revolutionary Guard and is subsequently purged, paving the way for Hashimoto's permanent absolute rule."
 
   repjapflavor.1.t:0 "A Quiet Shift"
   repjapflavor.1.d:0 "The days spent at what remained of the Imperial Palace were often quiet. When fires swept through Tokyo during the Glorious Revolution, the Palace was not spared. Some still remembered as Emperor Meiji himself stood before the burning wreckage of his legacy, the angry and starving wretches that once thought him a god closing in with rifles in hand.\n\nThese were quiet days though, Shirou thought. The Palace still remained a burnt out sepulchre, but the government insisted on guarding it lest it become a haven for \"Imperial loyalists\." As he marched along the perimeter, his eyes fell on a young man standing near the gate, gazing absentmindedly at the blackened structure. A frown crawled on to Shirou's face as he stepped up to the man, barking orders.\n\n\"What are you doing here, this is a restricted area!\"\n\nThe man broke from his stupor, fixing his glasses on his face and sputtering an apology. He glanced back one last time at the Palace, then to Shirou, and smiled.\n\n\"I used to live here, you know?\"\n\n\"What?\"\n\nBefore he had time to respond, the man was gone, melted away into the bustling Tokyo crowd. Shirou shook his head, looking once more back at the Palace before moving on with his shift."
