--- a/localisation/PB_Warcrimes_l_english.yml
+++ b/localisation/PB_Warcrimes_l_english.yml
@@ -31,7 +31,7 @@
   # DECISIONS
   ##########################
   PB_WMD_Decisions:0 "Special Weapons Division"
-  PB_WMD_Decisions_desc:0 "The Great War introduced the world to many new and destructive weapons, most notably chemical weaponry. In the time since, there have been significant advancements in the development of various weapons of mass destruction. Researching and developing these weapons could give us a significant edge in future conflicts, although the ethical ramifications of developing such implements are questionable at best."
+  PB_WMD_Decisions_desc:0 "\n\n\n\n\n\nThe Great War introduced the world to many new and destructive weapons, most notably chemical weaponry. In the time since, there have been significant advancements in the development of various weapons of mass destruction. Researching and developing these weapons could give us a significant edge in future conflicts, although the ethical ramifications of developing such implements are questionable at best."
   PB_Launch_Chemical_Attack:0 "§YDeploy Chemical Weapons§!"
   PB_Acquire_Chemical_Agents:0 "Develop Noxious Chemical Agents"
   PB_Acquire_Chemical_AgentsII:0 "Develop Choking Agents"
