--- a/localisation/PB_News_Events_l_english.yml
+++ b/localisation/PB_News_Events_l_english.yml
@@ -240,6 +240,10 @@
   PBNews.60.d:0 "Never could historians predict the existance of a Pan-Slavic state, in fact how its currently even holding shape is a mere paradox. Today though there is an almost brief silence of relief, with the war over and a united state for all slavs there is a nation wide state of euphoria. Though how long this will last for no one knows.\n\nTime will tell if this period of unity will last or crumble under it's own weight."
   PBNews.60.a:0 "This Can't Be Good"
 
+  PBNews.61.t:0 "The Morning After"
+  PBNews.61.d:0 "This morning the Russian delegation officially responded to claims regarding the Tsar's death. Confirming suspicions of his untimely demise to Epidemic Typhus: the disease that took the lives of many during the Great War and who now has claimed another, that being the head of the Russian Empire. Tsar Nicholas II.\n\nThe nation was already experiencing dangerous amounts of turmoil though it seems this suprise death has only elevated the situation. The Russain Duma has proclaimed temporary control until an official successor could be named."
+  PBNews.61.a:0 "Another Monarch Dead"
+
   stockcrisis.1.t:0 "The Stock Crisis hits the Empire"
   stockcrisis.1.d:0 ""
   stockcrisis.1.a:0 "Oh dear"
