--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -539,6 +539,7 @@
   RUS_a_new_holy_trinity:0 "A New Holy Trinity"
   RUS_stage_1:0 "Unite The Party"
   RUS_once_upon_a_time:0 "Once Upon A Time"
+  RUS_once_upon_a_time_desc:0 "Once upon a time many years ago Russia thrived, unmatched in power by all on the continent. No power dared to challenge her grand domain, from the black sea to the frontiers of Alyaska. That was a long time ago: before the catastrophe of the Great War; before when the King and Kaiser would leave her to rot; before when the Romanov's started to be corrupted with want; before when God did not abandon us to our fate. However, not is all lost, for that story is still to end..."
   RUS_the_tsar_rules_eternal:0 "The Tsar Rules Eternal"
   RUS_the_army_knows_best:0 "The Army Knows Best"
   RUS_a_new_russia:0 "A New Russia"
