Russia Focus Stuff

--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -14,7 +14,9 @@
   ##########################
   # IDEAS
   ##########################
-
+  
+  PB_RUS_German_Workers:0 "German Workers"
+  PB_RUS_Fort_Constructions:0 "Fort Constructions"
   PB_RUS_Mixed_Nation:0 "A Nation Divided"
   PB_RUS_Mixed_Nation_desc:0 "Russia for all it's history has remained a state united by luck. It's people have no loyalties to their overlords in Moscow and unless significant change occures then it shall stay that way or become something worse." 
   PB_RUS_Bitter_Revanchism:0 "Bitter Revanchism"
@@ -66,6 +68,8 @@
   PB_RUS_A_State_Under_Construction3:0 "The Strong State"
   PB_RUS_Slavic_Diaspora:0 "The Slavic Diaspora" 
   PB_RUS_Slavic_Diaspora2:0 "The Slavic Diaspora"
+  PB_RUS_German_Labour_Camps:0 "German Labour Camps"
+  PB_RUS_German_Labour_Camps2:0 "German Labour Camps"
 
   ##########Ideas For The Russian Collapse##########
   PB_RUS_Volga_Germany:0 "Volga Germany"
@@ -117,14 +121,10 @@
   RUS_the_bitch_war:0 " [BCL.GetFlag] The Bitch War"
   RUS_the_land_carrier:0 " [HWI.GetFlag] The Land Carrier"
   RUS_bessarabia_for_overlordship:0 " [ROM.GetFlag] Bessarabia For Overlordship"
-  RUS_seize_polish_lands:0 " [POL.GetFlag] Seize Polish Lands"
   RUS_crush_the_balkan_reds:0 " [HUN.GetFlag] Crush The Balkan Reds"
-  RUS_incorporate_the_governate:0 " [BAL.GetFlag] Incorporate The Governate"
   RUS_incorporate_the_viceroyalty:0 " [TRS.GetFlag] Incorporate The Viceroyalty"
   RUS_collapse_the_qing:0 " [CHI.GetFlag] Collapse The Qing"
   RUS_conquer_the_filipino_insurrectionists:0 " [PHI.GetFlag] Conquer The Filipino Insurrectionists"
-  RUS_non_aggresion_pact_with_the_japanese:0 " [JAP.GetFlag] Non-Aggression Pact With The Japanese"
-  RUS_fortify_the_cities:0 " Fortify The Cities"
   RUS_russification_campaigns:0 "Russification Campaigns"
   RUS_support_bulgarian_claims:0 " [BUL.GetFlag] Support Bulgarian Claims"  
   RUS_intervention_in_the_gbw:0 " [BUL.GetFlag] [ROM.GetFlag] [SER.GetFlag] [HUN.GetFlag] [CRO.GetFlag] Intervention In The GBW"
@@ -414,6 +414,21 @@
   russia91title:0 "We Are All Russian"
   russia91desc:0 ""
   russia91opta:0 "Long Live Russia!"
+  russia92title:0 "Ultimate Victory"
+  russia92desc:0 ""
+  russia92opta:0 "Our Greatest Foe Lies Dead"
+  russia93title:0 "The Stettin Trials"
+  russia93desc:0 ""
+  russia93opta:0 "Kill Them, Kill Them All"
+  russia94title:0 "The Spoils Of War"
+  russia94desc:0 ""
+  russia94opta:0 "And Who Says War Isn't Profitable?"
+  russia95title:0 "The Berlin Wall"
+  russia95desc:0 ""
+  russia95opta:0 "The French Will Never Cross"
+  russia96title:0 "The Administration Is Over"
+  russia96desc:0 ""
+  russia96opta:0 "For Russia!"
   ##########################
   # TOOLTIPS n Shit
   ##########################  
@@ -519,9 +534,27 @@
   russia65tooltip:0 "Religious Fervour Will Slightly §GIncrease§!"
   russia66tooltip:0 "If Religious Fervour Is At Less Than §Y100%§! Then Religious Fervour Will Largely §RDecrease§! And Some Debuffs Will Be Granted\n\nIf Religious Fervour Is At §Y100%§! Then Religious Fervour Will Be Set Back To §Y50%§! And All Debuffs Will Be Avoided\n\n§R--This Applies Every Year--§!"
   PB_RUS_Increase_Fervour:0 "A Decision Isn't Currently Active Or Religious Fervour Isn't At §Y100%§!"
+  russia67tooltip:0 "§W--------------§!\nIf Russia Or The Berlin Administration Owns Schleswig-Holstein Forts Will Also Be Built There"
   ########################## 
   # FOCUS
   ##########################
+  RUS_the_russian_caeser:0 "Strength"
+  RUS_the_moden_legions:0 "The Modern Legions..."
+  RUS_forever:0 "Lives Forever"  
+  RUS_unwavering_patriotism:0 "Unwavering Patriotism"
+  RUS_a_nation_of_slaves:0 "A Nation Of Slaves"
+  RUS_the_world_spins_around_russia:0 "The World Spins Around Russia"
+  RUS_the_dignified_state:0 "The Diginified State..."
+  RUS_for_the_people:0 "Lives For The People"
+  RUS_loyalty_for_the_cause:0 "Loyalty For The Cause"
+  RUS_all_heil_kolchak:0 "All Heil Kolchak"
+  RUS_all_are_fit:0 "All Are Fit..."
+  RUS_for_hell:0 "To Live For Hell"
+  RUS_the_one_party_state:0 "The One Party State"
+  RUS_line_them_all_up:0 "Line Them Up"
+  RUS_set_them_straight:0 "Set Them Straight"
+  RUS_obedience_and_order:0 "Obedience And Order"
+  RUS_the_center_of_the_universe:0 "The Center Of The Universe"
   RUS_our_slice_of_africa:0 "Our Slice Of Africa"
   RUS_nightmare:0 "Time To §CWake Up§!"
   RUS_a_state_under_construction:0 "A State Under Construction"
@@ -790,6 +823,98 @@
   RUS_pan_slavic_ambitions:0 "Pan-Slavic Ambitions"
   RUS_dreams_of_a_third_rome:0 "Dreams Of A Third Rome"
   RUS_pax_rossica:0 "Pax Rossica"
+  RUS_cursed_formables:0 "Cursed Formables"
+  RUS_purge_decadence:0 "Purge Decadence"
+  RUS_the_father_of_russia:0 "Purpose"
+  RUS_watch_them_yearn:0 "Watch Them Yearn..."
+  RUS_and_promise_them_change:0 "And Promise Them Change"
+  RUS_the_false_election:0 "The False Election"
+  RUS_our_greatest_leader:0 "Our Greatest Leader..."
+  RUS_and_the_finest_russian:0 "And The Finest Russian"
+  RUS_watch_them_learn:0 "Watch Them Learn..."
+  RUS_and_teach_them_everything:0 "And Teach Them Everything"
+  RUS_thriving_minds:0 "Thriving Minds"
+  RUS_grab_a_book:0 "Grab A Book..."
+  RUS_and_read:0 "And Read"
+  RUS_watch_them_burn:0 "Watch Them Burn..."
+  RUS_and_fucking_kill_all_of_them:0 "And Fucking Kill All Of Them"
+  RUS_the_students_protest:0 "The Student's Protest"
+  RUS_take_aim:0 "Take Aim..."
+  RUS_and_fire:0 "And Fire"
+  RUS_all_the_pieces_of_the_puzzle:0 "All The Pieces Of The Puzzle"
+  RUS_divinity:0 "Divinity"
+  RUS_russia_is_secure:0 "Russia Is Secure"
+  RUS_deprive_the_upper_class:0 "Deprive The Upper Class"
+  RUS_empty_their_pockets:0 "Empty Their Pockets"
+  RUS_a_system_of_two:0 "A System Of Two"
+  RUS_deviation_is_a_sin:0 "Deviation Is A Sin"
+  RUS_russia_is_smart:0 "Russia Is Smart"
+  RUS_mandatory_religious_studies:0 "Mandarory Religious Studies"
+  RUS_restore_the_academia:0 "Restore The Academia"
+  RUS_the_new_generation:0 "The New Generation"
+  RUS_stupidity_is_a_sin:0 "Stupidity Is A Sin"
+  RUS_russia_is_holy:0 "Russia Is Holy"
+  RUS_end_secularization:0 "End Secularization"
+  RUS_promote_traditional_values:0 "Promote Traditional Values"
+  RUS_spread_our_beliefs:0 "Spread Our Beliefs"
+  RUS_weakness_is_a_sin:0 "Weakness Is A Sin"
+  RUS_the_second_coming_of_christ:0 "The Second Coming Of Christ"
+  RUS_purity:0 "Purity"
+  RUS_purge_the_infidels:0 "Purge The Infidels"
+  RUS_purge_the_weak:0 "Purge The Weak"
+  RUS_purge_the_stupid:0 "Purge The Stupid"
+  RUS_purge_the_unloyal:0 "Purge The Unloyal"
+  RUS_slaves_to_an_idea:0 "Slaves To An Idea"
+  RUS_the_perfect_citizen:0 "The Perfect Citizen"
+  RUS_all_the_best_traits:0 "All The Best Traits"
+  RUS_all_the_best_looks:0 "All The Best Looks"
+  RUS_all_the_best_thoughts:0 "All The Best Thoughts" 
+  RUS_the_peak_of_humanity:0 "The Peak Of Humanity"
+  RUS_a_society_of_castes:0 "A Society Of Castes"
+  RUS_the_top_3_percent:0 "The Top 3%"
+  RUS_the_other_7_percent:0 "The Other 7%"
+  RUS_and_the_last_90_percent:0 "And The Last 90%"
+  RUS_will_all_work_in_unison:0 "Will All Work In Unison"
+  RUS_slaves_to_an_idea:0 "Slaves To An Idea"
+  RUS_the_russian_experiment:0 "The Russian Experiment"
+  RUS_fortify_moscow:0 "Fortify Moscow"
+  RUS_in_the_defense_of_russia:0 "In The Defense Of Russia"
+  RUS_protect_the_skies:0 "Protect The Skies"
+  RUS_focus_on_the_west:0 "Focus On The West"
+  RUS_prepare_for_the_winter_war:0 "Prepare For The Winter War"
+  RUS_the_kyiv_defense_line:0 "The Kyiv Defense Line"
+  RUS_incorporate_the_governate:0 "Incorporate The Governate"
+  RUS_seize_polish_lands:0 "Seize Polish Lands"
+  RUS_the_berlin_offensive:0 "The Berlin Offensive"
+  RUS_focus_on_the_east:0 "Focus On The East"
+  RUS_curb_japanese_aggression:0 "Curb Japanese Aggression"
+  RUS_invest_in_korea:0 "Invest In Korea"
+  RUS_project_aquirus:0 "Project Aquirus"
+  RUS_build_the_eastern_forts:0 "Build The Eastern Forts"
+  RUS_construct_listening_posts:0 "Construct Listening Posts"
+  RUS_demand_oil_rights_in_romania:0 "Demand Oil Rights In Romania"
+  RUS_search_for_alaskan_oil:0 "Search For Alaskan Oil"
+  RUS_the_german_goliath_is_dead:0 "The German Goliath Is Dead"
+  RUS_the_stettin_trials:0 "The Stettin Trials"
+  RUS_desecrate_their_corpse:0 "Desecrate Their Corpse"
+  RUS_seize_their_workers:0 "Seize Their Workers"
+  RUS_seize_their_resources:0 "Seize Their Resources"
+  RUS_set_up_labour_camps:0 "Set Up Labour Camps"
+  RUS_expand_the_camps:0 "Expand The Camps"
+  RUS_seize_their_guns:0 "Seize Their Guns"
+  RUS_transfer_industry:0 "Transfer Industry"
+  RUS_expand_the_silesian_iron_mines:0 "Expand The Silesian Mines"
+  RUS_build_the_berlin_wall:0 "Build The Berlin Wall"
+  RUS_construct_minefields:0 "No Mans Land"
+  RUS_build_up_the_north:0 "Build Up The North"
+  RUS_build_up_the_south:0 "Build Up The South"
+  RUS_anti_air_emplacements:0 "Anti-Air Emplacements"
+  RUS_grant_prussia_hinterpommern:0 "Grant Prussia Hinterpommern"
+  RUS_seize_the_state_for_ourselves:0 "Seize The State For Ourselves"
+  RUS_enforce_the_warm_water_treaty:0 "Enforce The Warm Water Treaty"
+  RUS_construct_the_berlin_rocket_site:0 "Constuct The Berlin Rocket Site"
+  RUS_support_covert_operations:0 "Support Covert Operations"
+
   ##########################
   # Party Loyalty Mechanic n shit
   ##########################
