--- a/localisation/PB_State_Modifiers_l_english.yml
+++ b/localisation/PB_State_Modifiers_l_english.yml
@@ -8,4 +8,4 @@
   autonomous_region:0 "Autonomous Region"
   Principality_of_Monaco:0 "The Principality of Monaco\n-----\n§WThis region contains the Principality of Monaco, a city-state bordering the Mediterranean. One of the smallest cities in the world, Monaco is a major hub for international trade in the region. Formerly an absolute monarchy, the principality adopted an Italian-style constitution following a revolution in 1908. The city is most notable for being a tax haven for wealthy Italians and European businessmen.§!\n""
   scottish_autonomy:0 "Scottish Autonomy\n-----\n§WThis region is part of the Commonwealth of Scotland, an autonomous Commonwealth within the United Kingdom.§!\n"
-  
+  No_Mans_Land:0 "No Mans Land\n-----\n§WThe surrounding area is poised with various inventions man has constructed to kill each other with."
