Around Half of Labour
Verify your Clock for my eternal suffering of Russian Loc is coming soon

--- a/localisation/PB_Britain_l_english.yml
+++ b/localisation/PB_Britain_l_english.yml
@@ -92,8 +92,11 @@
   PB_ENG_WUP_Sideline_Pollitt:0 "Sideline Pollitt"
   PB_ENG_WUP_Sideline_Pollitt_desc:0 "Pollitt is a dangerous man and a threat against what Britain stands for even if many in the WUP disagree with London's principles. We must sideline him and make him a footnote in the history of our party or face some hardline Marxists in the very heart of imperial government."
   PB_ENG_WUP_Workers_Rights_Charter:0 "Expand the Worker's Rights Charter"
+  PB_ENG_WUP_Workers_Rights_Charter_desc:0 "The Backbone of any nation is their working class. However Britain is known as a state which would extort it's own citizens to maximise the nation's profits, to prevent this miscarriage of justice we shall present to Parliament an extension and expansion of the Worker's right's charter to make sure no worker ever again shall suffer under his employer"  
   PB_ENG_WUP_Nationalization:0 "Nationalize the Failed Companies"
+  PB_ENG_WUP_Nationalization_desc:0 "Many companies have gone bust in these hard times. As the representatives of the working class we shall Nationalise these companies to prevent more unemployment in the nation whilst also reforming these companies to provide benefits to British society." 
   PB_ENG_WUP_Placate_Hardliners:0 "Placate the Hardliners"
+  PB_ENG_WUP_Placate_Hardliners:0 "Many radicals in the party helped the WUP achieve Downing street and in turn we shall accept some demands of these 'Hardline' Mp's. Many of our moderate compatriots and our colleagues in the British political spectrum will call us out on bending the knee to these hardline revoultionaries but the WUP is a party which rewards those who have earned it and these hardliners have earned it."
   PB_ENG_WUP_Empower_Bakuninists:0 "Align with the Bakuninists"
   PB_ENG_WUP_Women_Workers:0 "Women in the Workplace"
   PB_ENG_WUP_National_Industrial_Plan:0 "The National Industrial Plan"
