--- a/localisation/politics_l_english.yml
+++ b/localisation/politics_l_english.yml
@@ -67,6 +67,7 @@
  MANAGE_OCCUPIED_TERRITORIES_HEADER:0 "Foreign Territory"
  MANAGE_EXILED_GOVERNMENTS:0 "Exiled Governments"
  SHOW_EXILED_STATUS:0 "Exiled Status"
+SHOW_COLLABORATIONS:0 "Collaborations"
  POLITICAL_RESEARCH_BONUS_ENTRY:1 "$CATEGORY$: $FACTOR|=-0%$"
  POLITICAL_EQUIPMENT_TYPE_BONUS_ENTRY:0 "$ARCHETYPE$:"
  IDEA_SUB_CATEGORY_LIMIT:0 "§YMay only have one§!"
