--- a/localisation/PB_State_Modifiers_l_english.yml
+++ b/localisation/PB_State_Modifiers_l_english.yml
@@ -10,3 +10,4 @@
   scottish_autonomy:0 "Scottish Autonomy\n-----\n§WThis region is part of the Commonwealth of Scotland, an autonomous Commonwealth within the United Kingdom.§!\n"
   No_Mans_Land:0 "No Mans Land\n-----\n§WThe surrounding area is poised with various inventions man has constructed to kill each other with."
   terrain_paris:0 "Paris, France"
+  terrain_moscow:0 "Moscow, Russia"
