State Modifiers Push

--- a/localisation/PB_State_Modifiers_l_english.yml
+++ b/localisation/PB_State_Modifiers_l_english.yml
@@ -11,3 +11,7 @@
   No_Mans_Land:0 "No Mans Land\n-----\n§WThe surrounding area is poised with various inventions man has constructed to kill each other with."
   terrain_paris:0 "Paris, France"
   terrain_moscow:0 "Moscow, Russia"
+
+  terrain_paris:0 "Paris"
+  terrain_london:0 "London"
+  terrain_frankfurt:0 "Frankfurt"
