Various terrains and stuff

--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -72,6 +72,7 @@
   PB_RUS_German_Labour_Camps2:0 "German Labour Camps"
 
   ##########Ideas For The Russian Collapse##########
+
   PB_RUS_Volga_Germany:0 "Volga Germany"
   PB_RUS_Don_Republic:0 "Don Republic"
   PB_RUS_Idel_Ural:0 "Idel Ural"
@@ -85,9 +86,10 @@
   ##########################
 
   PB_Lost_Son:0 "The Lost Tsarevich"
-  POLITICS_Nicholas_II_DESC:0 "Tsar Nicholas II has lost all hope and lust for life since The Tragic Death of the Tsarevich Alexei Romanov and The Ensuing Suicide of the Tsarina Alexendra. Nicholas spends his days resting Vacant and Broken on the Imperial Throne letting his court and country decay apart from his seething hatred for his former allies who he blames for all his tragedies."
-  POLITICS_Pyotr_Wrangel_DESC:0 "§YBorn:§!07/11/1891\n\nA devout christian and Neo-Imperialist preacher makes §YPyotr Wrangel§! one of if not the most terrifying individuals to call the Russian colossus home. With the Tsar dead and the Okhrana's position secured as the de-facto leading governemnt there is no telling what this mad man has in plan for Europe, especially the two old orders that are Britian and Germany."
+  POLITICS_Nicholas_II_DESC:0 "§YBorn:§!18/3/1868\n\n§YTsar Nicholas§! II has lost all hope and lust for life. Nicholas spends his days resting Vacant and Broken on the Imperial Throne letting his court and country decay apart from his seething hatred for his former allies who he blames for all his tragedies.\n\nAs a result the political situation of the Russian Empire is unstable and weak and a simple flick could collapse the entire nation into degeneracy. Russia needs a strong, confident, and ambitious leader if she is to remain united, and feared.\n\nThe harshest of days are ahead for Russia and one wrong step will spell the end of the so called "§YEmpire Of The Slavs§!"\n\n§RThe German and British dogs will pay the ultimate price for their actions§!"
+  POLITICS_Pyotr_Wrangel_DESC:0 "§YBorn:§!27/7/1878\n\nA devout Orthodoxian and Neo-Imperialist preacher makes §YPyotr Wrangel§! one of if not the most terrifying individuals to call the Russian colossus home. With the Tsar dead and the Okhrana's position secured as the de-facto leading governemnt there is no telling what this mad man has in plan for Europe, especially the two old orders that are Britian and Germany."
   PB_Okhrana_Connections:0 "Okhrana Connections"
+
   ##########################
   # DECISIONS
   ##########################
